--- a/css/swad22.107.17.css
+++ b/css/swad22.107.17.css
@@ -3068,6 +3068,7 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 fieldset
 	{
 	margin:2px 0;
+	padding:2px;
 	border-style:solid;
 	border-width:1px;
 	border-radius:2px;
