--- a/css/swad22.107.17.css
+++ b/css/swad22.107.17.css
@@ -3067,7 +3067,7 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 /***************** Text decoration of fieldset and legend ********************/
 fieldset
 	{
-	margin:2px 0;
+	margin:2px 0 4px 0;
 	padding:2px;
 	border-style:solid;
 	border-width:1px;
