--- a/css/swad23.48.css
+++ b/css/swad23.48.css
@@ -444,6 +444,11 @@ a:hover						/* Default ==> underlined */
 		max-width:28px;
 		overflow:hidden;
 		}
+	#my_courses
+		{
+		width:100px;
+		margin:1px;
+		}
 	}
 @media only screen and (min-width: 480px) and (max-width: 800px)
 	{	/* For mobile-phones */
@@ -460,6 +465,11 @@ a:hover						/* Default ==> underlined */
 		display:table-cell;
 		max-width:60px;
 		overflow:hidden;
+		}
+	#my_courses
+		{
+		width:130px;
+		margin:1px;
 		}
 	}
 @media only screen and (min-width: 800px) and (max-width: 1024px)
@@ -478,6 +488,11 @@ a:hover						/* Default ==> underlined */
 		max-width:100px;
 		overflow:hidden;
 		}
+	#my_courses
+		{
+		width:130px;
+		margin:1px;
+		}
 	}
 @media only screen and (min-width: 1024px)
 	{	/* For desktop */
@@ -494,6 +509,11 @@ a:hover						/* Default ==> underlined */
 		display:table-cell;
 		max-width:150px;
 		overflow:hidden;
+		}
+	#my_courses
+		{
+		width:130px;
+		margin:1px;
 		}
 	}
 
@@ -616,11 +636,6 @@ a:hover						/* Default ==> underlined */
 .MAIN_TITLE_YELLOW	{color:white;}
 .MAIN_TITLE_PINK	{color:white;}
 .MAIN_TITLE_DARK	{color:#f7f6f5;}
-#my_courses
-	{
-	width:130px;
-	margin:1px;
-	}
 
 /******************************** Search *************************************/
 .WHAT_TO_SEARCH	{width:186px;}
@@ -2045,23 +2060,25 @@ a:hover img.CENTER_PHOTO_SHOW
 .ALERT_TXT_DARK		{color:white;}
 
 /*********************************** Icons ***********************************/
-.ICOx16		{			 height:16px; vertical-align:middle;}
-.ICO16x16	{width:16px; height:16px; vertical-align:middle;}
-.ICO20x20	{width:20px; height:20px; vertical-align:middle;}
-.ICOx20		{			 height:20px; vertical-align:middle; margin:0 auto;}
-.ICO25x25	{width:25px; height:25px; vertical-align:middle;}
-.ICO40x40	{width:40px; height:40px; vertical-align:middle;}
-.ICO64x64	{width:64px; height:64px; vertical-align:middle;}
+.ICO		{width:100%;				 vertical-align:middle;}
+.ICOx16		{				height:16px; vertical-align:middle;}
+.ICO16x16	{width:16px;	height:16px; vertical-align:middle;}
+.ICO20x20	{width:20px;	height:20px; vertical-align:middle;}
+.ICOx20		{				height:20px; vertical-align:middle; margin:0 auto;}
+.ICO25x25	{width:25px;	height:25px; vertical-align:middle;}
+.ICO40x40	{width:40px;	height:40px; vertical-align:middle;}
+.ICO64x64	{width:64px;	height:64px; vertical-align:middle;}
 
-.ICO80x40	{width:80px; height:40px; vertical-align:middle;}
-.ICO140x40	{width:140px; height:40px; vertical-align:middle;}
-.ICO212x40	{width:212px; height:40px; vertical-align:middle;}
-.ICO220x40	{width:220px; height:40px; vertical-align:middle;}
-.ICO265x40	{width:265px; height:40px; vertical-align:middle;}
+.ICO80x40	{width:80px;	height:40px; vertical-align:middle;}
+.ICO140x40	{width:140px;	height:40px; vertical-align:middle;}
+.ICO212x40	{width:212px;	height:40px; vertical-align:middle;}
+.ICO220x40	{width:220px;	height:40px; vertical-align:middle;}
+.ICO265x40	{width:265px;	height:40px; vertical-align:middle;}
 
-.ICO160x160	{width:160px; height:160px; vertical-align:middle;}
-.BANNER		{width:150px; height:50px;}
-.BANNER_SMALL	{width:75px; height:25px;}
+.ICO160x160	{width:160px;	height:160px; vertical-align:middle;}
+
+.BANNER			{width:150px;	height:50px;}
+.BANNER_SMALL	{width:75px;	height:25px;}
 
 .ICO_DARKRED	{color:#660000;}
 
@@ -2403,6 +2420,9 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 .PHOTOR45x60	{width: 45px; height: 60px; border-radius:3px; vertical-align:middle;}
 .PHOTOR60x80	{width: 60px; height: 80px; border-radius:3px; vertical-align:middle;}
 .PHOTOR186x248	{width:186px; height:248px; border-radius:4px;}
+
+.PHOTO_REC		{width:100%; border-radius:4px;
+			     max-width: 100%; height: auto;}
 
 .IMG_USR
 	{
@@ -2957,6 +2977,289 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 .USR_ID_NC_DARK		{color:#f98a8a}
 
 /******************************* Record card *********************************/
+@media only screen and (max-width: 480px)
+	{	/* For mobile-phones */
+	.REC_CONT
+		{
+		box-sizing: border-box;
+		width:300px;
+		margin:0 auto;
+		}
+	.REC_HEAD
+		{
+		font-family:Georgia,"DejaVu LGC Serif","Bitstream Vera Serif",serif;
+		color:#808080;
+		font-size:10pt;
+		}
+	.REC_NAME
+		{
+		box-sizing:border-box;
+		max-width:168px;
+		white-space:nowrap;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		color:#808080;
+		font-size:12pt;
+		font-weight:bold;
+		background-color:orange;
+		}
+	.REC_NICK
+		{
+		color:#808080;
+		font-size:10pt;
+		font-weight:bold;
+		}
+
+	.REC_C1_TOP
+		{
+		box-sizing:border-box;
+		width:32px;
+		padding-top:8px !important;
+		vertical-align:top;
+		background-color:red;
+		}
+	.REC_C2_TOP
+		{
+		box-sizing:border-box;
+		width:168px;
+		height:36px;
+		padding-top:8px !important;
+		background-color:yellow;
+		}
+	.REC_C3_TOP
+		{
+		box-sizing:border-box;
+		width:80px;
+		background-color:green;
+		}
+	
+	.REC_C1_MID
+		{
+		box-sizing:border-box;
+		width:32px;
+		background-color:red;
+		}
+	.REC_C2_MID
+		{
+		box-sizing:border-box;
+		width:168px;
+		background-color:yellow;
+		}
+	.REC_C3_MID
+		{
+		box-sizing:border-box;
+		width:80px;
+		background-color:green;
+		}
+	
+	.REC_C1_BOT
+		{
+		box-sizing:border-box;
+		width:130px;
+		background-color:red;
+		}
+	.REC_C2_BOT
+		{
+		box-sizing:border-box;
+		width:138px;
+		background-color:yellow;
+		}
+	.REC_C2_BOT_INPUT
+		{
+		box-sizing:border-box;
+		width:134px;
+		background-color:green;
+		}
+	}
+@media only screen and (min-width: 480px) and (max-width: 600px)
+	{	/* For mobile-phones */
+	.REC_CONT
+		{
+		box-sizing: border-box;
+		width:460px;
+		margin:0 auto;
+		}
+	.REC_HEAD
+		{
+		font-family:Georgia,"DejaVu LGC Serif","Bitstream Vera Serif",serif;
+		color:#808080;
+		font-size:11pt;
+		}
+	.REC_NAME
+		{
+		box-sizing:border-box;
+		max-width:264px;
+		white-space:nowrap;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		color:#808080;
+		font-size:16pt;
+		font-weight:bold;
+		background-color:orange;
+		}
+	.REC_NICK
+		{
+		color:#808080;
+		font-size:12pt;
+		font-weight:bold;
+		}
+
+	.REC_C1_TOP
+		{
+		box-sizing:border-box;
+		width:52px;
+		padding-top:8px !important;
+		vertical-align:top;
+		background-color:red;
+		}
+	.REC_C2_TOP
+		{
+		box-sizing:border-box;
+		width:264px;
+		height:56px;
+		padding-top:8px !important;
+		background-color:yellow;
+		}
+	.REC_C3_TOP
+		{
+		box-sizing:border-box;
+		width:124px;
+		background-color:green;
+		}
+	
+	.REC_C1_MID
+		{
+		box-sizing:border-box;
+		width:52px;
+		background-color:red;
+		}
+	.REC_C2_MID
+		{
+		box-sizing:border-box;
+		width:264px;
+		background-color:yellow;
+		}
+	.REC_C3_MID
+		{
+		box-sizing:border-box;
+		width:124px;
+		background-color:green;
+		}
+	
+	.REC_C1_BOT
+		{
+		box-sizing:border-box;
+		width:150px;
+		background-color:red;
+		}
+	.REC_C2_BOT
+		{
+		box-sizing:border-box;
+		width:278px;
+		background-color:yellow;
+		}
+	.REC_C2_BOT_INPUT
+		{
+		box-sizing:border-box;
+		width:274px;
+		background-color:green;
+		}
+	}
+@media only screen and (min-width: 600px)
+	{	/* For desktop */
+	.REC_CONT
+		{
+		box-sizing: border-box;
+		width:560px;
+		margin:0 auto;
+		}
+	.REC_HEAD
+		{
+		font-family:Georgia,"DejaVu LGC Serif","Bitstream Vera Serif",serif;
+		color:#808080;
+		font-size:12pt;
+		}
+	.REC_NAME
+		{
+		box-sizing:border-box;
+		max-width:316px;
+		white-space:nowrap;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		color:#808080;
+		font-size:20pt;
+		font-weight:bold;
+		background-color:orange;
+		}
+	.REC_NICK
+		{
+		color:#808080;
+		font-size:15pt;
+		font-weight:bold;
+		}
+
+	.REC_C1_TOP
+		{
+		box-sizing:border-box;
+		width:64px;
+		padding-top:8px !important;
+		vertical-align:top;
+		background-color:red;
+		}
+	.REC_C2_TOP
+		{
+		box-sizing:border-box;
+		width:316px;
+		height:68px;
+		padding-top:8px !important;
+		background-color:yellow;
+		}
+	.REC_C3_TOP
+		{
+		box-sizing:border-box;
+		width:160px;
+		background-color:green;
+		}
+	
+	.REC_C1_MID
+		{
+		box-sizing:border-box;
+		width:64px;
+		background-color:red;
+		}
+	.REC_C2_MID
+		{
+		box-sizing:border-box;
+		width:316px;
+		background-color:yellow;
+		}
+	.REC_C3_MID
+		{
+		box-sizing:border-box;
+		width:160px;
+		background-color:green;
+		}
+	
+	.REC_C1_BOT
+		{
+		box-sizing:border-box;
+		width:170px;
+		background-color:red;
+		}
+	.REC_C2_BOT
+		{
+		box-sizing:border-box;
+		width:358px;
+		background-color:yellow;
+		}
+	.REC_C2_BOT_INPUT
+		{
+		box-sizing:border-box;
+		width:354px;
+		background-color:green;
+		}
+	}
+
 .REC_USR
 	{
 	display:block;
@@ -2970,84 +3273,8 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 	vertical-align:top;
 	}
 
-.REC_C1_TOP
-	{
-	box-sizing:border-box;
-	width:68px;
-	padding-top:8px !important;
-	vertical-align:top;
-	}
-.REC_C2_TOP
-	{
-	box-sizing:border-box;
-	width:278px;
-	height:68px;
-	padding-top:8px !important;
-	}
-.REC_C3_TOP
-	{
-	box-sizing:border-box;
-	width:190px;
-	}
-
-.REC_C1_MID
-	{
-	box-sizing:border-box;
-	width:68px;
-	}
-.REC_C2_MID
-	{
-	box-sizing:border-box;
-	width:278px;
-	}
-.REC_C3_MID
-	{
-	box-sizing:border-box;
-	width:190px;
-	}
-
-.REC_C1_BOT
-	{
-	box-sizing:border-box;
-	width:170px;
-	}
-.REC_C2_BOT
-	{
-	box-sizing:border-box;
-	width:362px;
-	}
-.REC_C2_BOT_INPUT
-	{
-	box-sizing:border-box;
-	width:358px;
-	}
-
-.REC_HEAD
-	{
-	font-family:Georgia,"DejaVu LGC Serif","Bitstream Vera Serif",serif;
-	color:#808080;
-	font-size:12pt;
-	}
-.REC_NAME
-	{
-	box-sizing:border-box;
-	max-width:274px;
-	white-space:nowrap;
-	overflow:hidden;
-	text-overflow:ellipsis;
-	color:#808080;
-	font-size:20pt;
-	font-weight:bold;
-	}
-.REC_NICK
-	{
-	color:#808080;
-	font-size:15pt;
-	font-weight:bold;
-	}
 .REC_WEBS
 	{
-	width:180px;
 	margin:0 auto;
 	}
 .REC_EMAIL
@@ -4796,20 +5023,16 @@ button.PAG_DARK:hover,		.PAG_CUR_DARK		{background-color:#707070;}
 	}
 
 /***************************** Public user's profile *************************/
-.PRF_FIG_LEFT_CONT
+.PRF_FIG_CONT
 	{
-	display:inline-block;
-	box-sizing:border-box;
-	width:50%;
-	padding-right:10px;
-	text-align:right;
-	vertical-align:top;
+	margin:4px auto 6px auto;
+	text-align:center;
 	}
-.PRF_FIG_RIGHT_CONT
+.PRF_FIG_LEFT_RIGHT
 	{
 	display:inline-block;
 	box-sizing:border-box;
-	width:50%;
+	width:280px;
 	padding-left:10px;
 	text-align:left;
 	vertical-align:top;
