--- a/css/swad23.48.1.css
+++ b/css/swad23.48.1.css
@@ -1764,44 +1764,93 @@ a:hover img.CENTER_PHOTO_SHOW
 	vertical-align:top;
 	}
 
-.PRG_MAIN
-	{
-	text-align:left;
-	vertical-align:top;
-	}
 
+/******************************* Record card *********************************/
+@media only screen and (max-width: 480px)
+	{	/* For mobile-phones */
+	.PRG_MAIN
+		{
+		box-sizing:border-box;
+		max-width:100px;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		text-align:left;
+		vertical-align:top;
+		}
+	.PRG_DATE
+		{
+		box-sizing:border-box;
+		max-width:80px;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		}
+	}
+@media only screen and (min-width: 480px) and (max-width: 600px)
+	{	/* For mobile-phones */
+	.PRG_MAIN
+		{
+		box-sizing:border-box;
+		max-width:244px;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		text-align:left;
+		vertical-align:top;
+		}
+	.PRG_DATE
+		{
+		box-sizing:border-box;
+		max-width:132px;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		}
+	}
+@media only screen and (min-width: 600px)
+	{	/* For desktop */
+	.PRG_MAIN
+		{
+		text-align:left;
+		vertical-align:top;
+		}
+	.PRG_DATE
+		{
+		box-sizing:border-box;
+		max-width:132px;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		}
+	}
 
 .PRG_TIT_1_WHITE,
 .PRG_TIT_1_GREY,
 .PRG_TIT_1_PURPLE,
 .PRG_TIT_1_BLUE,
 .PRG_TIT_1_YELLOW,
-.PRG_TIT_1_PINK		{color:#4d88a1; font-size:20pt; font-weight:bold;}
-.PRG_TIT_1_DARK		{color:#afc4cc; font-size:20pt; font-weight:bold;}
+.PRG_TIT_1_PINK		{color:#4d88a1; font-size:16pt; font-weight:bold;}
+.PRG_TIT_1_DARK		{color:#afc4cc; font-size:16pt; font-weight:bold;}
 
 .PRG_TIT_2_WHITE,
 .PRG_TIT_2_GREY,
 .PRG_TIT_2_PURPLE,
 .PRG_TIT_2_BLUE,
 .PRG_TIT_2_YELLOW,
-.PRG_TIT_2_PINK		{color:#4d88a1; font-size:18pt; font-weight:bold;}
-.PRG_TIT_2_DARK		{color:#afc4cc; font-size:18pt; font-weight:bold;}
+.PRG_TIT_2_PINK		{color:#4d88a1; font-size:15pt; font-weight:bold;}
+.PRG_TIT_2_DARK		{color:#afc4cc; font-size:15pt; font-weight:bold;}
 
 .PRG_TIT_3_WHITE,
 .PRG_TIT_3_GREY,
 .PRG_TIT_3_PURPLE,
 .PRG_TIT_3_BLUE,
 .PRG_TIT_3_YELLOW,
-.PRG_TIT_3_PINK		{color:#4d88a1; font-size:16pt; font-weight:bold;}
-.PRG_TIT_3_DARK		{color:#afc4cc; font-size:16pt; font-weight:bold;}
+.PRG_TIT_3_PINK		{color:#4d88a1; font-size:14pt; font-weight:bold;}
+.PRG_TIT_3_DARK		{color:#afc4cc; font-size:14pt; font-weight:bold;}
 
 .PRG_TIT_4_WHITE,
 .PRG_TIT_4_GREY,
 .PRG_TIT_4_PURPLE,
 .PRG_TIT_4_BLUE,
 .PRG_TIT_4_YELLOW,
-.PRG_TIT_4_PINK		{color:#4d88a1; font-size:14pt; font-weight:bold;}
-.PRG_TIT_4_DARK		{color:#afc4cc; font-size:14pt; font-weight:bold;}
+.PRG_TIT_4_PINK		{color:#4d88a1; font-size:13pt; font-weight:bold;}
+.PRG_TIT_4_DARK		{color:#afc4cc; font-size:13pt; font-weight:bold;}
 
 .PRG_TIT_5_WHITE,
 .PRG_TIT_5_GREY,
@@ -1818,12 +1867,6 @@ a:hover img.CENTER_PHOTO_SHOW
 .PRG_TXT_YELLOW,
 .PRG_TXT_PINK	{color:#202020; font-size:12pt; line-height:1.5;}
 .PRG_TXT_DARK	{color:#e0e0e0; font-size:12pt; line-height:1.5;}
-
-.PRG_DATE
-	{
-	box-sizing:border-box;
-	width:70px;
-	}
 
 .PRG_HIDDEN
 	{
@@ -2543,13 +2586,13 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 
 /********************************* Form fonts ********************************/
 /* Inside white box */
-.FORM_IN_WHITE		{color:#4d88a1; font-size:12pt;}
-.FORM_IN_GREY		{color:#4d88a1; font-size:12pt;}
-.FORM_IN_PURPLE		{color:#4d88a1; font-size:12pt;}
-.FORM_IN_BLUE		{color:#4d88a1; font-size:12pt;}
-.FORM_IN_YELLOW		{color:#7c4d2a; font-size:12pt;}
-.FORM_IN_PINK		{color:#4d88a1; font-size:12pt;}
-.FORM_IN_DARK		{color:#afc4cc; font-size:12pt;}
+.FORM_IN_WHITE		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
+.FORM_IN_GREY		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
+.FORM_IN_PURPLE		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
+.FORM_IN_BLUE		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
+.FORM_IN_YELLOW		{color:#7c4d2a; font-size:12pt; white-space:nowrap;}
+.FORM_IN_PINK		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
+.FORM_IN_DARK		{color:#afc4cc; font-size:12pt; white-space:nowrap;}
 
 /* Outside white box */
 .FORM_OUT_WHITE		{color:#4d88a1; font-size:12pt;}
@@ -2979,12 +3022,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 /******************************* Record card *********************************/
 @media only screen and (max-width: 480px)
 	{	/* For mobile-phones */
-	.REC_CONT
-		{
-		box-sizing: border-box;
-		width:300px;
-		margin:0 auto;
-		}
 	.REC_HEAD
 		{
 		font-family:Georgia,"DejaVu LGC Serif","Bitstream Vera Serif",serif;
@@ -2994,19 +3031,18 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 	.REC_NAME
 		{
 		box-sizing:border-box;
-		max-width:168px;
+		max-width:160px;
 		white-space:nowrap;
 		overflow:hidden;
 		text-overflow:ellipsis;
 		color:#808080;
 		font-size:12pt;
 		font-weight:bold;
-		background-color:orange;
 		}
 	.REC_NICK
 		{
 		color:#808080;
-		font-size:10pt;
+		font-size:12pt;
 		font-weight:bold;
 		}
 
@@ -3016,69 +3052,60 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:32px;
 		padding-top:8px !important;
 		vertical-align:top;
-		background-color:red;
 		}
 	.REC_C2_TOP
 		{
 		box-sizing:border-box;
-		width:168px;
+		width:160px;
 		height:36px;
 		padding-top:8px !important;
-		background-color:yellow;
 		}
 	.REC_C3_TOP
 		{
 		box-sizing:border-box;
 		width:80px;
-		background-color:green;
 		}
 	
 	.REC_C1_MID
 		{
 		box-sizing:border-box;
 		width:32px;
-		background-color:red;
 		}
 	.REC_C2_MID
 		{
 		box-sizing:border-box;
-		width:168px;
-		background-color:yellow;
+		width:160px;
 		}
 	.REC_C3_MID
 		{
 		box-sizing:border-box;
 		width:80px;
-		background-color:green;
 		}
 	
 	.REC_C1_BOT
 		{
 		box-sizing:border-box;
-		width:130px;
-		background-color:red;
+		width:120px;
+		max-width:120px;
+		overflow:hidden;
+		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT
 		{
 		box-sizing:border-box;
-		width:138px;
-		background-color:yellow;
+		width:148px;
+		max-width:148px;
+		overflow:hidden;
+		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT_INPUT
 		{
 		box-sizing:border-box;
-		width:134px;
-		background-color:green;
+		width:144px;
 		}
 	}
 @media only screen and (min-width: 480px) and (max-width: 600px)
 	{	/* For mobile-phones */
-	.REC_CONT
-		{
-		box-sizing: border-box;
-		width:460px;
-		margin:0 auto;
-		}
 	.REC_HEAD
 		{
 		font-family:Georgia,"DejaVu LGC Serif","Bitstream Vera Serif",serif;
@@ -3088,91 +3115,81 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 	.REC_NAME
 		{
 		box-sizing:border-box;
-		max-width:264px;
+		max-width:260px;
 		white-space:nowrap;
 		overflow:hidden;
 		text-overflow:ellipsis;
 		color:#808080;
 		font-size:16pt;
 		font-weight:bold;
-		background-color:orange;
 		}
 	.REC_NICK
 		{
 		color:#808080;
-		font-size:12pt;
+		font-size:13pt;
 		font-weight:bold;
 		}
 
 	.REC_C1_TOP
 		{
 		box-sizing:border-box;
-		width:52px;
+		width:50px;
 		padding-top:8px !important;
 		vertical-align:top;
-		background-color:red;
 		}
 	.REC_C2_TOP
 		{
 		box-sizing:border-box;
-		width:264px;
-		height:56px;
+		width:260px;
+		height:54px;
 		padding-top:8px !important;
-		background-color:yellow;
 		}
 	.REC_C3_TOP
 		{
 		box-sizing:border-box;
-		width:124px;
-		background-color:green;
+		width:120px;
 		}
 	
 	.REC_C1_MID
 		{
 		box-sizing:border-box;
-		width:52px;
-		background-color:red;
+		width:50px;
 		}
 	.REC_C2_MID
 		{
 		box-sizing:border-box;
-		width:264px;
-		background-color:yellow;
+		width:260px;
 		}
 	.REC_C3_MID
 		{
 		box-sizing:border-box;
-		width:124px;
-		background-color:green;
+		width:120px;
 		}
 	
 	.REC_C1_BOT
 		{
 		box-sizing:border-box;
 		width:150px;
-		background-color:red;
+		max-width:150px;
+		overflow:hidden;
+		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT
 		{
 		box-sizing:border-box;
-		width:278px;
-		background-color:yellow;
+		width:280px;
+		max-width:280px;
+		overflow:hidden;
+		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT_INPUT
 		{
 		box-sizing:border-box;
-		width:274px;
-		background-color:green;
+		width:276px;
 		}
 	}
 @media only screen and (min-width: 600px)
 	{	/* For desktop */
-	.REC_CONT
-		{
-		box-sizing: border-box;
-		width:560px;
-		margin:0 auto;
-		}
 	.REC_HEAD
 		{
 		font-family:Georgia,"DejaVu LGC Serif","Bitstream Vera Serif",serif;
@@ -3189,7 +3206,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		color:#808080;
 		font-size:20pt;
 		font-weight:bold;
-		background-color:orange;
 		}
 	.REC_NICK
 		{
@@ -3204,7 +3220,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:64px;
 		padding-top:8px !important;
 		vertical-align:top;
-		background-color:red;
 		}
 	.REC_C2_TOP
 		{
@@ -3212,51 +3227,49 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:316px;
 		height:68px;
 		padding-top:8px !important;
-		background-color:yellow;
 		}
 	.REC_C3_TOP
 		{
 		box-sizing:border-box;
 		width:160px;
-		background-color:green;
 		}
 	
 	.REC_C1_MID
 		{
 		box-sizing:border-box;
 		width:64px;
-		background-color:red;
 		}
 	.REC_C2_MID
 		{
 		box-sizing:border-box;
 		width:316px;
-		background-color:yellow;
 		}
 	.REC_C3_MID
 		{
 		box-sizing:border-box;
 		width:160px;
-		background-color:green;
 		}
 	
 	.REC_C1_BOT
 		{
 		box-sizing:border-box;
 		width:170px;
-		background-color:red;
+		max-width:170px;
+		overflow:hidden;
+		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT
 		{
 		box-sizing:border-box;
-		width:358px;
-		background-color:yellow;
+		width:366px;
+		max-width:366px;
+		overflow:hidden;
+		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT_INPUT
 		{
 		box-sizing:border-box;
-		width:354px;
-		background-color:green;
+		width:362px;
 		}
 	}
 
@@ -3276,14 +3289,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 .REC_WEBS
 	{
 	margin:0 auto;
-	}
-.REC_EMAIL
-	{
-	box-sizing:border-box;
-	max-width:358px;
-	white-space:nowrap;
-	overflow:hidden;
-	text-overflow:ellipsis;
 	}
 .REC_FIELDNAME
 	{
@@ -4488,29 +4493,29 @@ legend {font-size:12pt;}
 
 @media only screen and (max-width: 590px)
 	{	/* For mobile-phones (maximum width visible on Moto G4 vertical) */
-	.Tml_WIDTH		{width:276px;}	/* 556-280 */
-	.Tml_RIGHT_WIDTH	{width:220px;}	/* 500-280 */
+	.Tml_WIDTH				{width:276px;}	/* 556-280 */
+	.Tml_RIGHT_WIDTH		{width:220px;}	/* 500-280 */
 	.Tml_RIGHT_AUTHOR_WIDTH	{width: 60px;}	/* 340-280 */
-	.Tml_COM_WIDTH		{width:180px;}	/* 460-280 */
+	.Tml_COM_WIDTH			{width:180px;}	/* 460-280 */
 	.Tml_COM_AUTHOR_WIDTH	{width: 20px;}	/* 300-280 */
 	.Tml_MED_INPUT_WIDTH	{width:120px;}	/* 400-280 */
-	.TmlNot_FOOT_WIDTH	{width:220px;}	/* 500-280 */
+	.TmlNot_FOOT_WIDTH		{width:220px;}	/* 500-280 */
 	.Tml_COMM_FOOT_WIDTH	{width:180px;}	/* 460-280 */
-	.Tml_FAV_NOT_WIDTH	{width:100px;}	/* (480-280)/2 */
-	.Tml_SHA_NOT_WIDTH	{width:100px;}	/* (480-280)/2 */
-	.Tml_FAV_COM_WIDTH	{width:160px;}	/* 440-280 */
+	.Tml_FAV_NOT_WIDTH		{width:100px;}	/* (480-280)/2 */
+	.Tml_SHA_NOT_WIDTH		{width:100px;}	/* (480-280)/2 */
+	.Tml_FAV_COM_WIDTH		{width:160px;}	/* 440-280 */
 	}
 @media only screen and (min-width: 590px)
 	{	/* For tablets and desktop (maximum width visible on Moto G4 horizontal) */
-	.Tml_WIDTH		{width:556px;}
-	.Tml_RIGHT_WIDTH	{width:500px;}
+	.Tml_WIDTH				{width:556px;}
+	.Tml_RIGHT_WIDTH		{width:500px;}
 	.Tml_RIGHT_AUTHOR_WIDTH	{width:340px;}
-	.Tml_COM_WIDTH		{width:460px;}
+	.Tml_COM_WIDTH			{width:460px;}
 	.Tml_COM_AUTHOR_WIDTH	{width:300px;}
 	.Tml_MED_INPUT_WIDTH	{width:400px;}
-	.Tml_FAV_NOT_WIDTH	{width:240px;}
-	.Tml_SHA_NOT_WIDTH	{width:240px;}
-	.Tml_FAV_COM_WIDTH	{width:440px;}
+	.Tml_FAV_NOT_WIDTH		{width:240px;}
+	.Tml_SHA_NOT_WIDTH		{width:240px;}
+	.Tml_FAV_COM_WIDTH		{width:440px;}
 	}
 
 .Tml_NEW_PUB_WHITE,
@@ -5260,8 +5265,9 @@ button.PAG_DARK:hover,		.PAG_CUR_DARK		{background-color:#707070;}
 		display:inline-block;
 		text-align:left;
 		vertical-align:middle;
-		max-width:120px;
+		max-width:130px;
 		overflow:hidden;
+		text-overflow:ellipsis;
 		}
 	}
 @media only screen and (min-width: 800px)
