--- a/css/swad23.50.1.css
+++ b/css/swad23.50.1.css
@@ -1925,7 +1925,7 @@ a:hover img.CENTER_PHOTO_SHOW
 /********************************** Notice ***********************************/
 .NOTICE_CONT
 	{
-	padding:10px 0;
+	padding:4px;
 	}
 .NOTICE_HIGHLIGHT	{animation:fadeinnotice 2s linear forwards;}
 @keyframes fadeinnotice
