--- a/css/swad23.52.2.css
+++ b/css/swad23.52.2.css
@@ -2585,13 +2585,13 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 
 /********************************* Form fonts ********************************/
 /* Inside white box */
-.FORM_IN_WHITE		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
-.FORM_IN_GREY		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
-.FORM_IN_PURPLE		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
-.FORM_IN_BLUE		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
-.FORM_IN_YELLOW		{color:#7c4d2a; font-size:12pt; white-space:nowrap;}
-.FORM_IN_PINK		{color:#4d88a1; font-size:12pt; white-space:nowrap;}
-.FORM_IN_DARK		{color:#afc4cc; font-size:12pt; white-space:nowrap;}
+.FORM_IN_WHITE		{color:#4d88a1; font-size:12pt;}
+.FORM_IN_GREY		{color:#4d88a1; font-size:12pt;}
+.FORM_IN_PURPLE		{color:#4d88a1; font-size:12pt;}
+.FORM_IN_BLUE		{color:#4d88a1; font-size:12pt;}
+.FORM_IN_YELLOW		{color:#7c4d2a; font-size:12pt;}
+.FORM_IN_PINK		{color:#4d88a1; font-size:12pt;}
+.FORM_IN_DARK		{color:#afc4cc; font-size:12pt;}
 
 /* Outside white box */
 .FORM_OUT_WHITE		{color:#4d88a1; font-size:12pt;}
@@ -3000,8 +3000,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 .DAT_SMALL_YELLOW_DARK		{font-family:"Arial Narrow","Nimbus Sans L","DejaVu LGC Sans Condensed",sans-serif; color:#C0C000; font-size:12pt;}
 
 /******************************** User's IDs *********************************/
-.USR_ID		{font-size:18pt; font-weight:bold;}
-
 .USR_ID_C_WHITE,
 .USR_ID_C_GREY,
 .USR_ID_C_PURPLE,
@@ -3087,7 +3085,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:120px;
 		max-width:120px;
 		overflow:hidden;
-		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT
 		{
@@ -3095,7 +3092,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:148px;
 		max-width:148px;
 		overflow:hidden;
-		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT_INPUT
 		{
@@ -3171,7 +3167,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:150px;
 		max-width:150px;
 		overflow:hidden;
-		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT
 		{
@@ -3179,7 +3174,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:280px;
 		max-width:280px;
 		overflow:hidden;
-		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT_INPUT
 		{
@@ -3255,7 +3249,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:170px;
 		max-width:170px;
 		overflow:hidden;
-		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT
 		{
@@ -3263,7 +3256,6 @@ table.CELLS_PAD_10	> tbody > tr > td {padding:10px;}
 		width:366px;
 		max-width:366px;
 		overflow:hidden;
-		text-overflow:ellipsis;
 		}
 	.REC_C2_BOT_INPUT
 		{
