--- a/css/swad23.53.5.css
+++ b/css/swad23.53.5.css
@@ -4272,13 +4272,13 @@ legend {font-size:12pt;}
 	{
 	box-sizing:border-box;
 	width:100%;
-	padding:25px 25px 125px 25px;
+	padding:25px 0 50px 0;
 	}
 .CALL_FOR_EXAM_HIDDEN
 	{
 	box-sizing:border-box;
 	width:100%;
-	padding:25px 25px 125px 25px;
+	padding:25px 0 50px 0;
 	opacity:0.3;
 	}
 .CALL_FOR_EXAM_TIT
